<resources>
    <string name="app_name">kotlin2_L1</string>
    <string name="start">start</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="get_shopitem">get shopItem</string>
    <string name="get_all">get all</string>
    <string name="addShopItem">add ShopItem</string>
    <string name="id">id</string>
    <string name="add">add</string>
    <string name="count">count</string>
    <string name="name">name</string>
    <string name="search">search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>